# music-platform

./: README.md
backend/: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
backend/certs/: localhost-key.pem  localhost.pem
backend/migrations/: 20241012112951_table.sql
backend/src/: auth.rs  db.rs  dtos.rs  error.rs  main.rs  models.rs  routes.rs
backend/src/database/: favorites.rs  history.rs  mod.rs  playlists.rs  track.rs  upload.rs  users.rs
backend/src/handler/: auth.rs  favorites.rs  getfile.rs  history.rs  mod.rs  playlists.rs  upload.rs  users.rs
backend/src/utils/: password.rs  token.rs
frontend/: .env  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/action/: authHandler.ts  favoritesHandler.ts  getHandler.ts  playlists.ts
frontend/app/: layout.tsx
frontend/app/(protected)/: layout.tsx
frontend/certificates/: localhost-key.pem  localhost.crt  localhost.pem
frontend/components/: AddPlaylistModel.tsx  Favorites.tsx  Historys.tsx  Home.tsx  MusicEditModel.tsx  header.tsx  sideBar.tsx
frontend/components/auth/: AuthCard.tsx  LoginForm.tsx  LogoutButton.tsx  RegisterForm.tsx
frontend/components/music/: MusicCard.tsx  MusicPlayer.tsx  musicProvider.tsx
frontend/components/playlists/: playlists.tsx  playlistsForm.tsx
frontend/components/profile/: PasswordChange.tsx  Profile.tsx  UserProfile.tsx
frontend/components/schema/: authType.ts  playlistType.ts  uploadType.ts
frontend/components/ui/: input.tsx
frontend/components/upload/: ResumeUpload.tsx  (+4 more)
(+12 files in other folders)
